[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/Players/Player_old.gd" type="Script" id=1]
[ext_resource path="res://GUI/player_panel/HealthDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/Players/States.gd" type="Script" id=3]
[ext_resource path="res://assets/fallguys11/fallguys11.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/Players/ChasingRange.gd" type="Script" id=5]
[ext_resource path="res://entities/Players/Navigation.gd" type="Script" id=6]
[ext_resource path="res://entities/Players/Health.gd" type="Script" id=7]
[ext_resource path="res://entities/Players/RaycastCollection.gd" type="Script" id=8]

[sub_resource type="CapsuleShape" id=1]
radius = 1.31886
height = 1.87428

[sub_resource type="CylinderShape" id=2]
radius = 20.0
height = 0.01

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 1, 1, 0.0784314 )

[sub_resource type="CylinderMesh" id=4]
material = SubResource( 3 )
top_radius = 20.0
bottom_radius = 20.0
height = 0.2

[node name="Pivot" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 1.98952e-13, -8.69647e-21, 0, -4.37114e-08, -1, -1.98952e-13, 1, -4.37114e-08, 0, -0.67779, 0 )
shape = SubResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 2.44984, 0 )

[node name="Health" type="Spatial" parent="HealthBar"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -1.22492, 0 )
script = ExtResource( 7 )

[node name="CooldownHealing" type="Timer" parent="HealthBar/Health"]
one_shot = true

[node name="RingTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Body" parent="." instance=ExtResource( 4 )]
transform = Transform( -200, 0, -3.01992e-05, 0, 200, 0, 3.01992e-05, 0, -200, 0, -2.7, 0 )

[node name="RaycastCollection" type="Spatial" parent="."]
script = ExtResource( 8 )

[node name="RayCast" type="RayCast" parent="RaycastCollection"]
transform = Transform( 0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="RayCast2" type="RayCast" parent="RaycastCollection"]
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="RayCast3" type="RayCast" parent="RaycastCollection"]
transform = Transform( 0.939693, 0, -0.34202, 0, 1, 0, 0.34202, 0, 0.939693, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="Navigation" type="Spatial" parent="."]
script = ExtResource( 6 )

[node name="States" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="ChasingCooldown" type="Timer" parent="States"]
one_shot = true

[node name="AttackCooldown" type="Timer" parent="States"]
one_shot = true

[node name="ChasingRange" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.39888, 0 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="ChasingRange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.90735e-06, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="ChasingRange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.34314, 0 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[connection signal="input_event" from="." to="." method="_on_Pivot_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Pivot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Pivot_mouse_exited"]
[connection signal="ready" from="." to="RaycastCollection" method="_on_Pivot_ready"]
[connection signal="ready" from="." to="States" method="_on_Pivot_ready"]
[connection signal="ready" from="." to="ChasingRange" method="_on_Pivot_ready"]
[connection signal="heal" from="HealthBar/Health" to="." method="_on_Health_heal"]
[connection signal="timeout" from="HealthBar/Health/CooldownHealing" to="HealthBar/Health" method="_on_CooldownHealing_timeout"]
[connection signal="timeout" from="RingTimer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Body" to="States" method="_on_Body_animation_finished"]
[connection signal="ready" from="Body" to="States" method="_on_Body_ready"]
[connection signal="is_attackable" from="RaycastCollection" to="States" method="_on_RaycastCollection_is_attackable"]
[connection signal="player_out_of_range" from="RaycastCollection" to="States" method="_on_RaycastCollection_player_out_of_range"]
[connection signal="destination_reached" from="Navigation" to="." method="_on_Navigation_destination_reached"]
[connection signal="node_changed" from="Navigation" to="." method="_on_Navigation_node_changed"]
[connection signal="ready" from="Navigation" to="States" method="_on_Navigation_ready"]
[connection signal="state_changed" from="States" to="." method="_on_States_state_changed"]
[connection signal="timeout" from="States/ChasingCooldown" to="States" method="_on_AttackCooldown_timeout"]
[connection signal="body_entered" from="ChasingRange" to="ChasingRange" method="_on_ChasingRange_body_entered"]
[connection signal="body_exited" from="ChasingRange" to="ChasingRange" method="_on_ChasingRange_body_exited"]
[connection signal="everybody_exited" from="ChasingRange" to="States" method="_on_ChasingRange_everybody_exited"]
[connection signal="ready" from="ChasingRange" to="States" method="_on_ChasingRange_ready"]
